# nekomimi

./: Cargo.toml  README.md
src/: main.rs
src/messengers/discord/: client.rs
