[package]
name = "nekomimi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
